Inclusão da rota de listagem de permissões
